--- a/Pdfowicz/package.json
+++ b/Pdfowicz/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@progress/kendo-drawing": "^1.19.0",
     "html-pdf": "^3.0.1",
     "pdf-lib": "^1.17.1",
     "rxjs": "~7.8.0",
