--- a/Pdfowicz/package.json
+++ b/Pdfowicz/package.json
@@ -23,6 +23,7 @@
     "@progress/kendo-drawing": "^1.19.0",
     "html-pdf": "^3.0.1",
     "pdf-lib": "^1.17.1",
+    "pdfmake": "^0.2.8",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
