--- a/Pdfowicz/package.json
+++ b/Pdfowicz/package.json
@@ -20,8 +20,15 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@progress/kendo-angular-common": "^14.1.0",
+    "@progress/kendo-angular-grid": "^14.1.0",
+    "@progress/kendo-angular-pdf-export": "^14.1.0",
+    "@progress/kendo-angular-pdfviewer": "^14.1.0",
     "@progress/kendo-drawing": "^1.19.0",
+    "@progress/kendo-file-saver": "^1.1.1",
+    "@types/kendo-ui": "^2023.2.4",
     "html-pdf": "^3.0.1",
+    "jquery": "^3.7.1",
     "pdf-lib": "^1.17.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -32,6 +39,7 @@
     "@angular/cli": "^16.2.9",
     "@angular/compiler-cli": "^16.2.0",
     "@types/jasmine": "~4.3.0",
+    "@types/jquery": "^3.5.29",
     "html2pdf.js": "^0.10.1",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
